--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,7 @@
     "source=${localWorkspaceFolder}/tools,target=/tools,type=bind,consistency=cached",
     "source=${localWorkspaceFolder}/code,target=/code,type=bind,consistency=cached",
     "source=${localWorkspaceFolder}/iss,target=/gen/output/iss,type=bind,consistency=cached",
+    "source=${localWorkspaceFolder}/dump,target=/gen/output/dump,type=bind,consistency=cached",
     "source=${localWorkspaceFolder}/testsuite,target=/testsuite,type=bind,consistency=cached",
     "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
   ],
