--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,15 +7,12 @@
       "OPEN_VADL_GIT_REPO": "git@ea.complang.tuwien.ac.at:vadl/open-vadl.git"
     }
   },
-  "workspaceFolder": "/testsuite",
+  "workspaceFolder": "/work",
   "mounts": [
-    "source=${localWorkspaceFolder}/tools,target=/tools,type=bind,consistency=cached",
-    "source=${localWorkspaceFolder}/code,target=/code,type=bind,consistency=cached",
-    "source=${localWorkspaceFolder}/iss,target=/gen/output/iss,type=bind,consistency=cached",
-    "source=${localWorkspaceFolder}/dump,target=/gen/output/dump,type=bind,consistency=cached",
-    "source=${localWorkspaceFolder}/testsuite,target=/testsuite,type=bind,consistency=cached",
+    "source=${localWorkspaceFolder},target=/work,type=bind,consistency=cached",
     "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
   ],
-  "runArgs": ["--name=open-vadl-iss-dev-2"],
-  "customizations": {}
+  "runArgs": ["--name=open-vadl-iss-dev"],
+  "customizations": {},
+  "postCreateCommand": "bash scripts/post-create.sh"
 }
